# TransformerAlgebra

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
chat/: chatlog-20251204.md  chatlog-20251205-2.md  chatlog-20251205.md  chatlog-20251206.md
doc/: attribution.md  contribution.md  expand_issues.md  expression_design.md  interface.md  notation.md  object_model.md  roadmap.md  speculation.md  theory.md
doc/analysis/: mlp.md  speculation.md
notebooks/: Annotate2.ipynb  Demo End.ipynb  Demo Start.ipynb  Summary.ipynb  Test Expand-pythia-410m-deduped.ipynb  Test Expand-pythia14m.ipynb  Test Expand.ipynb  investigate.ipynb
scripts/: test_contribution.py
src/transformer_algebra/: __init__.py  core.py  interface.py  logit_lens.py  service.py
tests/: __init__.py  conftest.py  test_basic.py  test_notation.py
